# go-risk-module-api

./: .dockerignore  .env-sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gh-docker-compose.yml  manage.py  prod-docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: chart-publish.yml  ci.yml  linting.yml  test-helm.yml
caddy/: Caddyfile
common/: admin.py  enums.py  models.py  serializers.py  utils.py  views.py
common/fixtures/: regions.json
common/migrations/: 0001_initial.py  0002_auto_20220203_0523.py  0003_auto_20220218_1103.py  0004_region_name.py  0005_country_bbox.py  0006_country_centroid.py  0007_auto_20230206_0403.py  0008_country_record_type.py
earthquake/: admin.py  apps.py  filter_set.py  models.py  serializers.py  tasks.py  views.py
earthquake/migrations/: 0001_initial.py  0002_alter_earthquake_country.py
helm/go-risk-api/: Chart.yaml  values-test.yaml  values.yaml
imminent/: admin.py  apps.py  enums.py  filter_set.py  models.py  serializers.py  tasks.py  views.py
imminent/migrations/: 0001_initial.py  0002_earthquake.py  0003_auto_20220321_0839.py  0004_auto_20220324_1437.py  0005_pdc_severity.py  0006_adam.py  0007_adam_geojson.py  0008_auto_20230116_0805.py  0009_adam_storm_position_geojson.py  0010_adam_population_exposure.py  0011_auto_20230404_0400.py  0012_gdacs.py  0013_auto_20230410_1021.py  0014_meteoswiss.py  0015_meteoswissagg.py  0016_meteoswissagg_geojson_details.py  0017_auto_20230503_0935.py  0018_gwis.py  0019_alter_meteoswissagg_country.py  0020_auto_20230908_0522.py  0021_auto_20230920_1421.py  0022_auto_20240809_0448.py  0023_auto_20240905_1034.py
imminent/sources/: pdc.py  utils.py
ipc/: ADM0_TH.csv  admin.py  apps.py  filter_set.py  models.py  serializers.py  tasks.py  views.py
ipc/migrations/: 0001_initial.py  0002_globaldisplacement.py  0003_auto_20211028_0451.py  0004_auto_20211102_0435.py  0005_auto_20211111_0524.py  0006_auto_20211125_0902.py  0007_ipcmonthly.py  0008_auto_20211130_0835.py  0009_auto_20211130_0901.py  0010_thinkhazardcountry_thinkhazardinformation.py  0011_auto_20211209_1003.py
ipc/scripts/: create_think_hazard.py
oddrin/: IDMC_Risk_Displacement_Monthly_Percentages.xlsx  INFORM_Risk_2022_v061.xlsx  ODDRIN_EQ20210814HTI_Est20210815.tif  admin.py  apps.py  exposure.xlsx  factories.py  filter_set.py  models.py  raster.xlsx  serializers.py  tasks.py  views.py
oddrin/migrations/: 0001_initial.py  0002_idmc.py  0003_alter_idmc_hazard_type.py  0004_auto_20211028_0451.py  0005_idmcsuddenonset.py  0006_informriskseasonal.py  0007_auto_20211108_0632.py  0008_auto_20211111_0524.py  0009_alter_idmc_hazard_type.py  0010_auto_20211117_0809.py  0011_auto_20211124_0759.py  0012_auto_20211130_0547.py  0013_alter_oddrin_source_type.py  0014_displacementdata.py  0015_auto_20211209_1003.py  0016_pdc_pdcdisplacement.py  0017_auto_20220105_0432.py  0017_auto_20220105_1112.py  0018_oddrin_cog_file.py  (+3 more)
risk_module/: asgi.py  cache.py  celery.py  enums.py  managers.py  sentry.py  settings.py  urls.py  wsgi.py
scripts/: run_develop.sh  run_prod.sh  run_worker.sh  run_worker_beat.sh
seasonal/: IDMC-PMD-AAD-Sudden-onset-Hazards.xlsx  INFORM_NA_Seasonal.xlsx  INFORM_Risk_2024_v067.xlsx  Possible Early Actions.xlsx  admin.py  apps.py  exposure.xlsx  filter_set.py  gar_data.xlsx  gar_update.xlsx  models.py  raster.xlsx  serializers.py  tasks.py  views.py
(+121 files in other folders)
